# RC_CAR_GUI

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  configure_debug.bat  example_cpp_usage.py  requirements.txt  setup_cpp.py
.github/: copilot-instructions.md
cpp/include/: math_operations.h  renderer3d.h
cpp/src/: bindings.cpp  main.cpp  math_operations.cpp  rand_pointcloud_test.cpp  renderer3d.cpp
cpp/tests/: test_math_operations.cpp
docs/: CPP_SETUP_GUIDE.md
src/: run.py
src/car_controls/: BaseClass.py  CommandBus.py  VideoStreaming.py  controller.py
src/config/: rc-car-viewer-config.ini
src/dualsense/: dualsense_controls.py
src/network/: NetworkManager.py  interfaces.py  ntp_server.py  udp_client.py
src/ui/: FirmwareUpdateWindow.py  MainWindow.py  TelemetryWindow.py  UIConsumer.py  VideoStreamingWindow.py  VisualizationWindow.py  theme.py
src/utils/: cpp_extensions.py  utilities.py
